--- a/juego.pi.html
+++ b/juego.pi.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crónicas del Tiempo: La Guerra de las Sombras</title>
-    <link rel="stylesheet" href="style.css"> <!-- Archivo de estilos CSS -->
+    <title>Crónicas del Tiempo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="game-container">
-        <!-- Aquí irán los elementos del juego (Canvas, botones, etc.) -->
         <canvas id="gameCanvas"></canvas>
+        <div id="hud">
+            <div id="score">Puntos: 0</div>
+            <div id="lives">Vidas: 3</div>
+        </div>
+        <div id="game-over" class="hidden">
+            <h1>Game Over</h1>
+            <button onclick="restartGame()">Reiniciar</button>
+        </div>
     </div>
-
-    <script src="script.js"></script> <!-- Archivo de JavaScript -->
+    <script src="script.js"></script>
 </body>
 </html>
